--- a/style.css
+++ b/style.css
@@ -1,89 +1,113 @@
 * {
   box-sizing: border-box;
 }
-  body {
-    font-family: "cairo";
-    margin: 0;
-  }
+body {
+  font-family: "cairo";
+  margin: 0;
+}
 
-  .slider-container {
-    margin: 10px auto;
-    width: 800px;
-    height: 500px;
-    position: relative;
-  }
-  .slider-container img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 1s;
-    z-index: 1;
-  }
-  .slider-container img.active {
-    opacity: 1;
-  }
-  .slider-container .slide-number {
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    background-color: rgba(0, 0, 0, .6);
-    color: #FFF;
-    padding: 5px 10px;
-    font-size: 20px;
-    z-index: 2;
-    border-radius: 6px;
-  }
-  .slider-controls {
-    width: 800px;
-    margin: auto;
-    overflow: hidden;
-  }
-  .slider-controls .prev,
-  .slider-controls .next {
-    background-color: #009688;
-    color: #FFF;
-    font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: 5px;
-    user-select: none;
-    width: 20%;
-  }
-  .slider-controls .prev {
-    float: left;
-  }
-  .slider-controls .next {
-    float: right;
-  }
-  .slider-controls .prev.disabled,
-  .slider-controls .next.disabled {
-    background-color: rgba(0, 150, 136, 0.5);
-    cursor: no-drop;
-  }
-  .slider-controls .indicators {
-    width: 60%;
-    float: left;
-  }
-  .slider-controls .indicators ul {
-    list-style: none;
-    margin: 0;
-    text-align: center;
-  }
-  .slider-controls .indicators ul li {
-    display: inline-block;
-    background-color: #F6F6F6;
-    color: #333;
-    font-weight: bold;
-    height: 28px;
-    width: 28px;
-    border-radius: 4px;
-    margin: 0 2px;
-    line-height: 28px;
-    cursor: pointer;
-  }
-  .slider-controls .indicators ul li.active {
-    background-color: #009688;
-    color: #FFF;
-  }
+.slider-container {
+  margin: 10px auto;
+  width: 800px;
+  height: 500px;
+  position: relative;
+
+  /* if i want fade comment display and overflow */
+  /* display: flex;
+  overflow: hidden; */
+}
+.slider-container img {
+  /* if i will use fade */
+  /* position: absolute;
+  opacity: 0; */
+
+  flex-shrink: 0;
+  display: inline;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+}
+/* .slider-container img.active {
+  opacity: 1;
+} */
+.slider-container .slide-number {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 20px;
+  z-index: 2;
+  border-radius: 6px;
+}
+.slider-controls {
+  width: 800px;
+  margin: auto;
+  overflow: hidden;
+}
+.slider-controls .prev,
+.slider-controls .next {
+  background-color: #009688;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 5px;
+  user-select: none;
+  width: 20%;
+}
+.slider-controls .prev {
+  float: left;
+}
+.slider-controls .next {
+  float: right;
+}
+.slider-controls .prev.disabled,
+.slider-controls .next.disabled {
+  background-color: rgba(0, 150, 136, 0.5);
+  cursor: no-drop;
+}
+.slider-controls .indicators {
+  width: 60%;
+  float: left;
+}
+.slider-controls .indicators ul {
+  list-style: none;
+  margin: 0;
+  text-align: center;
+}
+.slider-controls .indicators ul li {
+  display: inline-block;
+  background-color: #f6f6f6;
+  color: #333;
+  font-weight: bold;
+  height: 28px;
+  width: 28px;
+  border-radius: 4px;
+  margin: 0 2px;
+  line-height: 28px;
+  cursor: pointer;
+}
+.slider-controls .indicators ul li.active {
+  background-color: #009688;
+  color: #fff;
+}
+.options {
+  margin-inline: auto;
+  width: fit-content;
+  margin-top: 20px;
+  font-size: 22px;
+  text-transform: capitalize;
+}
+
+.options label:first-of-type {
+  margin-right: 30px;
+}
