--- a/style.css
+++ b/style.css
@@ -13,19 +13,16 @@ body {
   position: relative;
 }
 .slider-container img {
-
-
   flex-shrink: 0;
   display: inline;
   width: 100%;
   height: 100%;
   z-index: 1;
-
-  transition: all 1s;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
+  transition: all 2s;
+  -webkit-transition: all 2s;
+  -moz-transition: all 2s;
+  -ms-transition: all 2s;
+  -o-transition: all 2s;
 }
 /* .slider-container img.active {
   opacity: 1;
@@ -48,7 +45,7 @@ body {
 }
 .slider-controls .prev,
 .slider-controls .next {
-  background-color: #009688;
+  background-color: #ff5722;
   color: #fff;
   font-size: 16px;
   text-align: center;
@@ -91,7 +88,7 @@ body {
   cursor: pointer;
 }
 .slider-controls .indicators ul li.active {
-  background-color: #009688;
+  background-color: #ff5722;
   color: #fff;
 }
 .options {
@@ -101,9 +98,33 @@ body {
   font-size: 22px;
   text-transform: capitalize;
 }
-.options label{
-cursor: pointer;
+.options input {
+  opacity: 0;
+}
+.options label {
+  cursor: pointer;
+  position: relative;
 }
 .options label:first-of-type {
   margin-right: 30px;
+}
+
+.options label::before {
+  content: "";
+  position: absolute;
+  width: 14px;
+  aspect-ratio: 1;
+  left: -25px;
+  bottom: 13px;
+  border: 3px solid #fff;
+  outline: 3px solid #ff5722;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.options input:checked + label::before {
+  background-color: #ff5722;
 }
